<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Проверка IP</string>
    <string name="channel_name">Мониторинг доступности IP</string>
    <string name="notif_title">Проверка белого списка</string>
    <string name="notif_starting">Запуск проверки…</string>
    <string name="action_stop">Стоп</string>
    <string name="label_url">URL выдачи следующего IP (GET …/api/v1/next)</string>
    <string name="label_interval">Интервал (мин)</string>
    <string name="label_timeout">Таймаут сети (сек)</string>
    <string name="button_start">Начать мониторинг</string>
    <string name="button_stop">Остановить</string>
    <string name="label_scheduled_utc">Авто 00:00–01:00 UTC ежедневно</string>
    <string name="button_refresh">Обновить статус</string>
    <string name="section_status">Последняя проверка</string>
    <string name="status_monitoring_on">Мониторинг: включён</string>
    <string name="status_monitoring_off">Мониторинг: выключен</string>
    <string name="status_never">ещё не было</string>
    <string name="reachable_yes">доступен</string>
    <string name="reachable_no">недоступен</string>
    <string name="label_last_time">Время</string>
    <string name="label_last_ip">IP из эндпоинта</string>
    <string name="label_last_reachable">Доступность (TCP)</string>
    <string name="label_last_message">Сообщение</string>
    <string name="status_reachable">%1$s отвечает (TCP)</string>
    <string name="status_unreachable">%1$s не отвечает (TCP 443/80/22)</string>
    <string name="status_fetch_error">Ошибка запроса: %1$s</string>
    <string name="status_no_pending">Нет IP в очереди (все проверены или список пуст)</string>
    <string name="toast_started">Мониторинг запущен</string>
    <string name="toast_stopped">Мониторинг остановлен</string>
    <string name="toast_notify_denied">Без уведомлений фоновый режим может быть ограничен</string>
    <string name="section_updates">Обновление с GitHub</string>
    <string name="label_current_version">Текущая версия: %1$s (%2$d)</string>
    <string name="button_check_update">Проверить обновления</string>
    <string name="update_checking">Проверка…</string>
    <string name="update_downloading">Загрузка…</string>
    <string name="update_latest">У вас последняя версия</string>
    <string name="update_available_title">Доступно обновление</string>
    <string name="update_available_message">Новая версия: %1$s\nУстановлена: %2$s</string>
    <string name="update_download">Скачать и установить</string>
    <string name="update_error">Ошибка обновления: %1$s</string>
    <string name="update_configure_repo">Задайте github.owner и github.repo в gradle.properties (см. документацию в репозитории)</string>
    <string name="update_need_install_permission">Нужно разрешение на установку из этого приложения</string>
    <string name="update_open_settings">Настройки</string>
    <string name="update_bytes">%1$s байт</string>
    <string name="update_download_progress_known">Загружено: %1$s из %2$s</string>
    <string name="update_download_progress_unknown">Загружено: %1$s</string>
</resources>
